<package>
  <name>rover_description</name>
  <version>0.1.0</version>

  <description>Rover description package</description>
  <author>Salah-Eddine Missri</author>

  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
